--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="eu">
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
@@ -83,22 +83,22 @@
     <h2>Известные жители</h2>
     <p>Дом заселялся в 1931 году, одновременно с заселением Дома на набережной, ул. Серафимовича, д. 2, представителями советской номенклатуры республиканского уровня — чиновниками и функционерами второй руки. Наиболее заметные из них по своему положению занимали квартиры в верхних этажах и в торцах жилого корпуса. Позднее, в 1937—1938 годах, практически все они были осуждены и расстреляны как «враги народа» (см. Ссылки).</p>
     <ul>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D1%8E%D1%82%D0%B8%D0%BD,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D0%B2%D0%B8%D1%87" title="Милютин, Николай Александрович">Н.&nbsp;А.&nbsp;Милютин</a> — в 1924—1929 годах наркомфин РСФСР, в 1929 году председатель Малого СНК — один из идеологов «новых форм социалистического жилища», автор монографии «Соцгород»[16]. Квартира Милютина, спроектированная им для своей семьи с согласия М. Гинзбурга, уже после возведения здания, находилась на крыше здания, в помещении, запланированном под вентиляционную камеру, оборудование для которой не было закуплено, из-за нехватки денег[1]. Двухуровневая квартира — первый в мире «пентхауз»[6].</li>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%9A%D1%80%D1%8B%D0%BB%D0%B5%D0%BD%D0%BA%D0%BE,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%92%D0%B0%D1%81%D0%B8%D0%BB%D1%8C%D0%B5%D0%B2%D0%B8%D1%87">Н. В. Крыленко</a>, кв. 46 — нарком юстиции СССР.</li>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D1%82%D0%BE%D0%BD%D0%BE%D0%B2-%D0%9E%D0%B2%D1%81%D0%B5%D0%B5%D0%BD%D0%BA%D0%BE,_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D0%B2%D0%B8%D1%87">В. А. Антонов-Овсеенко</a> кв. 49 — нарком юстиции РСФСР, с женой Софьей Ивановной Левиной.</li>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B0%D1%80%D0%BF,_%D0%A1%D0%B5%D1%80%D0%B3%D0%B5%D0%B9_%D0%91%D0%B5%D0%BD%D0%B5%D0%B4%D0%B8%D0%BA%D1%82%D0%BE%D0%B2%D0%B8%D1%87">С. Б. Карп</a>, кв. 47 — председатель Госплана РСФСР.</li>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%BE%D0%BA%D0%BE%D0%BB%D0%BE%D0%B2,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D0%B0%D0%BD%D1%82%D0%B8%D0%BD%D0%BE%D0%B2%D0%B8%D1%87">Н. К. Соколов</a>, кв. 42 — председатель Правления Госбанка СССР.</li>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%9B%D0%B8%D1%81%D0%B8%D1%86%D1%8B%D0%BD,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%92%D0%B0%D1%81%D0%B8%D0%BB%D1%8C%D0%B5%D0%B2%D0%B8%D1%87">Н. В. Лисицын</a>, кв. 50 — нарком земледелия РСФСР.</li>
+      <li><a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D1%8E%D1%82%D0%B8%D0%BD,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D0%B2%D0%B8%D1%87" title="Милютин, Николай Александрович">Н.&nbsp;А.&nbsp;Милютин</a> — в 1924—1929 годах наркомфин РСФСР, в 1929 году председатель Малого СНК — один из идеологов «новых форм социалистического жилища», автор монографии «Соцгород»[16]. Квартира Милютина, спроектированная им для своей семьи с согласия М. Гинзбурга, уже после возведения здания, находилась на крыше здания, в помещении, запланированном под вентиляционную камеру, оборудование для которой не было закуплено, из-за нехватки денег[1]. Двухуровневая квартира — первый в мире «пентхауз»[6].</li>
+      <li><a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D1%80%D1%8B%D0%BB%D0%B5%D0%BD%D0%BA%D0%BE,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%92%D0%B0%D1%81%D0%B8%D0%BB%D1%8C%D0%B5%D0%B2%D0%B8%D1%87">Н. В. Крыленко</a>, кв. 46 — нарком юстиции СССР.</li>
+      <li><a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D1%82%D0%BE%D0%BD%D0%BE%D0%B2-%D0%9E%D0%B2%D1%81%D0%B5%D0%B5%D0%BD%D0%BA%D0%BE,_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D0%B2%D0%B8%D1%87">В. А. Антонов-Овсеенко</a> кв. 49 — нарком юстиции РСФСР, с женой Софьей Ивановной Левиной.</li>
+      <li><a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B0%D1%80%D0%BF,_%D0%A1%D0%B5%D1%80%D0%B3%D0%B5%D0%B9_%D0%91%D0%B5%D0%BD%D0%B5%D0%B4%D0%B8%D0%BA%D1%82%D0%BE%D0%B2%D0%B8%D1%87">С. Б. Карп</a>, кв. 47 — председатель Госплана РСФСР.</li>
+      <li><a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%A1%D0%BE%D0%BA%D0%BE%D0%BB%D0%BE%D0%B2,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D0%B0%D0%BD%D1%82%D0%B8%D0%BD%D0%BE%D0%B2%D0%B8%D1%87">Н. К. Соколов</a>, кв. 42 — председатель Правления Госбанка СССР.</li>
+      <li><a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9B%D0%B8%D1%81%D0%B8%D1%86%D1%8B%D0%BD,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%92%D0%B0%D1%81%D0%B8%D0%BB%D1%8C%D0%B5%D0%B2%D0%B8%D1%87">Н. В. Лисицын</a>, кв. 50 — нарком земледелия РСФСР.</li>
       <li>Герасимов Иван Семенович, кв. 51 — управляющий делами СНК РСФСР.</li>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%A1%D1%83%D0%BB%D0%B8%D0%BC%D0%BE%D0%B2,_%D0%94%D0%B0%D0%BD%D0%B8%D0%B8%D0%BB_%D0%95%D0%B3%D0%BE%D1%80%D0%BE%D0%B2%D0%B8%D1%87">Д. Е. Сулимов</a>, кв. 45 — председатель СНК РСФСР.</li>
+      <li><a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%A1%D1%83%D0%BB%D0%B8%D0%BC%D0%BE%D0%B2,_%D0%94%D0%B0%D0%BD%D0%B8%D0%B8%D0%BB_%D0%95%D0%B3%D0%BE%D1%80%D0%BE%D0%B2%D0%B8%D1%87">Д. Е. Сулимов</a>, кв. 45 — председатель СНК РСФСР.</li>
       <li>Лебедь Дмитрий Захарович, кв. 43 — зам. председателя Совнаркома РСФСР.</li>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B5%D0%BC%D0%B0%D1%88%D0%BA%D0%BE,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D0%B2%D0%B8%D1%87">Н. А. Семашко</a> кв. 14 — бывший нарком здравоохранения РСФСР, с семьёй.</li>
+      <li><a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B5%D0%BC%D0%B0%D1%88%D0%BA%D0%BE,_%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D0%B9_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D0%B2%D0%B8%D1%87">Н. А. Семашко</a> кв. 14 — бывший нарком здравоохранения РСФСР, с семьёй.</li>
       <li>Гуревич Моисей Григорьевич, кв. 41 — заместитель наркома здравоохранения РСФСР.
       <li>Хронин Василий Никифорович, кв. 39 — заместитель наркома внутренней торговли РСФСР.</li>
       <li>Бухарцев Дмитрий Павлович, кв. 29 — кандидат экономических наук, корреспондент газеты «Известия» в Германии в 1930-е гг.</li>
       <li>Гордеев Михаил Григорьевич, кв. 27 — публицист, коллекционер живописи.</li>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B5%D0%BB%D0%B8%D0%BD,_%D0%9F%D1%91%D1%82%D1%80_%D0%98%D0%B2%D0%B0%D0%BD%D0%BE%D0%B2%D0%B8%D1%87">П. И. Келин</a>, кв. ? — художник и преподаватель живописи, ближайший друг Н. А. Милютина.</li>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%92%D0%B8%D1%88%D0%BD%D0%B5%D0%B2%D1%81%D0%BA%D0%B8%D0%B9,_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D0%B2%D0%B8%D1%87_(%D1%81%D1%82%D0%B0%D1%80%D1%88%D0%B8%D0%B9)">А. А. Вишневский</a>, кв. ? (5 этаж) — доктор медицинских наук (1936), позднее главный хирург Советской армии.</li>
+      <li><a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B5%D0%BB%D0%B8%D0%BD,_%D0%9F%D1%91%D1%82%D1%80_%D0%98%D0%B2%D0%B0%D0%BD%D0%BE%D0%B2%D0%B8%D1%87">П. И. Келин</a>, кв. ? — художник и преподаватель живописи, ближайший друг Н. А. Милютина.</li>
+      <li><a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%92%D0%B8%D1%88%D0%BD%D0%B5%D0%B2%D1%81%D0%BA%D0%B8%D0%B9,_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D0%B2%D0%B8%D1%87_(%D1%81%D1%82%D0%B0%D1%80%D1%88%D0%B8%D0%B9)">А. А. Вишневский</a>, кв. ? (5 этаж) — доктор медицинских наук (1936), позднее главный хирург Советской армии.</li>
       <li>А. А. Дейнека кв.18 — советский живописец, с женой Серафимой Лычевой.</li>
       <li>В. А. Соловьёв — драматург.</li>
       <li>Гостынский Владимир Викторович, кв. ? (6 этаж) — начальник управления НКФ, ближайший помощник Н. Милютина, с семьей.</li>
@@ -106,7 +106,7 @@
       <li>Жуков Савелий Григорьевич, кв. 11 — заместитель наркома Наркомата Совхозов РСФСР — репрессирован; далее
       Ольга Инсарова (Окорокова) — солистка Большого театра (меццо-сопрано) в 1943—1959 годах.</li>
       <li>Крючков Петр Петрович, кв. 13 — директор Музея А. М. Горького, с женой. После ареста семьи Крючковых в 1938 г. квартира № 13 перешла к семье Н. А. Семашко.</li>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B3%D0%B0%D0%BD,_%D0%9E%D0%BB%D1%8C%D0%B3%D0%B0_%D0%9F%D0%B0%D0%B2%D0%BB%D0%BE%D0%B2%D0%BD%D0%B0">О. П. Бган</a> — советская актриса.</li>
+      <li><a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%91%D0%B3%D0%B0%D0%BD,_%D0%9E%D0%BB%D1%8C%D0%B3%D0%B0_%D0%9F%D0%B0%D0%B2%D0%BB%D0%BE%D0%B2%D0%BD%D0%B0">О. П. Бган</a> — советская актриса.</li>
     </ul>
 
     <h2>Современное состояние памятника</h2>
@@ -122,6 +122,6 @@
       <li>Факт отсутствия капитального ремонта дома (помимо окраски фасадов) за все 85 лет его существования никем не оспаривается, но повсеместно отсутствует его объяснение. Объясняется это просто: дом оказался неремонтопригодным. После войны 1941 — 1945 годов в архивах не оказалось детальных чертежей здания, а равным образом и чертежей коммуникаций водоснабжения, канализации и вентиляции. По данным Архнадзора, Гинзбург никогда не публиковал осуществленный вариант планов дома и не упоминал о наличии в нём квартиры Милютина. Как сообщает Е. Б. Овсянникова (2015), «чертежи, чудесным образом, были обнаружены в цюрихском архиве Ле Корбюзье».</li>
       <li>По количеству репрессированных жильцов в годы «большого террора» дом Наркомфина (он же 2-й дом СНК), вероятно, сопоставим лишь с 1-м домом СНК (Дом на набережной). Жильцы (поголовно советская номенклатура республиканского уровня) не менее двадцати квартир были репрессированы. Практически все они были расстреляны, но были и отбывавшие срок приговора в ГУЛАГе. И в конце 1950-х в дом ещё наведывались взрослые дети семей, выселенные из дома в 37-м и 38-м годах, желавшие посмотреть на свои квартиры и на тех, кто в них теперь живёт.</li>
       <li>Сдача Дома Наркомфина (в 1931 году 2-й дом Совнаркома) по времени совпала с открытием 102-этажного небоскреба Эмпайр стейт билдинг в Нью-Йорке. Оба здания носили статусный характер, и каждое из них, в своей стране, являлось техническим, технологическим и культурным прорывом. Эмпайр стейт билдинг сохранил своё значение, и по сей день остается культурным символом Америки — «American cultural icon». Идеи и принципы, заложенные в проект Дома Наркомфина были преданы забвению сразу по его завершении. И нынешнее состояние дома лучше слов свидетельствует об истинной ценности идей обобществления, затем нормирования и распределения всего и вся, ради осуществления которых были уложены в землю миллионы людей.</li>
-    </ul>  
+    </ul>
   </body>
 </html>
