--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
+
+    <style>
+     h2 {
+      color: red;
+      font-size: 60px;
+      background-color: blue;
+     }
+
+    h2 + p {
+    color: green;
+    }
+    </style>
   </head>
   <body>
    <h1>Дом Наркомфина</h1>
