Временное сохранение работы

--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
+
+    <style>
+      h2 {
+        color: #669999;
+        font-size: 60px;
+        background-color: #FF9999;
+      }
+
+      h2 + p {
+        color: green;
+      }
+    </style>
+
   </head>
   <body>
     <h1>Дом Наркомфина</h1>
