--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
+
+    <style>
+      h2 {
+        color: red;
+        font-size: 60px;
+        background-color: blue;
+      }
+
+      h2 + p {
+        color: green;
+      }
+    </style>
   </head>
   <body>
     <h1>Дом Наркомфина</h1>
