временное сохранение работы

--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
+
+    <style>
+      h2 {
+        color: #21610B;
+        font-size: 30px;
+        background-color: #E1F5A9;
+      }
+
+      h2 + p {
+        color: #21610B;
+      }
+    </style>
+
   </head>
   <body>
     <h1>Дом Наркомфина</h1>
