--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         font-size: 60px;
         background-color: #e2e2e2;
       }
+      h2 + p {
+        color: green;
+        background-color: e2e2e2;
+      }
     </style>
   </head>
   <body>
