--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
+
+    <style>
+      h2 {
+        color: white;
+        font-size: 60px;
+        background-color: gray;
+      }
+
+      h2 + p {
+        color: purple;
+      }
+    </style>
   </head>
   <body>
     <h1>Дом Наркомфина</h1>
