--- a/project/index.html
+++ b/project/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
     <style>
-      h2 {
-        color: red;
-        font-size: 60px;
-        background-color: #e2e2e2;
-      }
-      h2 + p {
-        color: green;
-        background-color: e2e2e2;
+      body {
+        background-image: url(dc-online-media-mockup.jpg);
+        background-size: 800px 20624px;
+        background-position: top center;
+        background-repeat: no-repeat;
+        font-family: 'PT Sans', sans-serif;
       }
     </style>
   </head>
