Добавили reset и стили

--- a/index.html
+++ b/index.html
@@ -3,17 +3,55 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
+    <link rel="stylesheet" href="reset.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
 
     <style>
+      body {
+        width: 700px;
+        margin: 0 auto;
+        font-family: 'PT Sans', sans-serif;
+        background-image: url(dc-online-media-mockup.jpg);
+        background-size: 800px  20624px;
+        background-position: top center;
+        background-repeat: no-repeat;
+      }
+
+      h1, h2, h3 {
+        font-family: 'Pt Sans Caption', sans-serif;
+        font-weight: bold;
+      }
+
+      h1 {
+        margin-top: 66px;
+        font-size: 40px;
+        line-height: 46px;
+      }
+
+      h1 + p {
+        font-family: 'Pt Sans Caption', sans-serif;
+        font-size: 22px;
+        line-height: 32px;
+        color: rgba(0, 0, 0, .4);
+        margin: 0px;
+      }
+
       h2 {
-        color: red;
-        font-size: 60px;
-        background-color: blue;
+        margin-top: 39px;
+        font-size: 32px;
+        line-height: 46px;
       }
 
       h2 + p {
-        color: green;
+        margin-top: 2px;
+        line-height: 34px;
       }
+
+      p {
+        font-size: 22px;
+        line-height: 33px;
+        margin-top: 30px;
+     }
     </style>
   </head>
   <body>
@@ -51,6 +89,8 @@
     <p>И наконец, в самой верхней части дома, на уровне плоской крыши, сделано несколько комнат типа общежития, где реализовны опубликованные Н. Милютиным в «Соцгороде» жилые ячейки на одного человека. Часть из них — на одного человека, часть — на двух. Между каждой парой комнат расположены душевая и умывальная комнаты.</p>
     <p>Здание включает в себя около десятка типов квартир, в том числе:</p>
 
+    <!-- il>li*3{Content} -->
+    <!-- TODO Something-->
     <ul>
       <li>Квартира типа F — основное количество жилых ячеек в доме минимального размера. В одни из них можно попасть из остекленной галереи или коридора, спускаясь по внутриквартирной лестнице в общую комнату, а в другие — поднимаясь в неё также по аналогичной лестнице.</li>
       <li>Квартира типа K — 8 квартир для больших семей располагались в центральной части дома между лестничными клетками. Квартиры представляли собой двухъярусные жилые ячейки высотой каждого этажа 2,3 метра, при этом часть квартиры имела высоту потолка 4,6 метра, и в ней находилась общая жилая комната, выполняющая функции гостиной. На нижнем ярусе были устроены коридор, передняя, терраса и кухня, а в верхнем — две спальни размером 19,9 и 12,1 м². Кроме открытой террасы на втором этаже, для отдыха на воздухе и принятия солнечных ванн была предназначена также плоская крыша с разбитым на ней цветником.</li>
