--- a/index.html
+++ b/index.html
@@ -3,17 +3,52 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
+    <link rel="stylesheet" href="reset.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans+Narrow:400,700&subset=cyrillic" rel="stylesheet">
 
     <style>
-     h2 {
-      color: red;
-      font-size: 60px;
-      background-color: blue;
+      body{
+       width: 700px;
+       margin: 0 auto;
+       font-family: 'PT Sans', sans-serif;
+       background-image: url(dc-online-media-mockup.jpg);
+       background-size: 800px 20624px;
+       background-position: top center;
+       background-repeat: no-repeat;
+      }
+
+     h1, h2, h3, h4 {
+       font-family: 'PT Sans Caption', sans-serif;
+       font-weight: bold;
+       }
+
+       h1{
+         font-size: 40px;
+         line-height: 46px;
+         margin-top: 69px;
+       }
+         h1 + p {
+           line-height: 33px;
+           font-family: 'PT Sans Caption', sans-serif;
+           font-size: 22px;
+           color: rgba(0, 0, 0, .4);
+       }
+       p {
+       font-size: 22px;
+       margin-top: 38px;
+       line-height: 33px;
      }
 
-    h2 + p {
-    color: green;
-    }
+     h2{
+       margin-top: 39px;
+       font-size: 32px;
+       line-height: 46px;
+     }
+     h2 + p{
+       margin-top: 
+     }
+
+
     </style>
   </head>
   <body>
