--- a/index.html
+++ b/index.html
@@ -3,23 +3,60 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
+    <link rel="stylesheet" href="reset.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
 
     <style>
-      h2 {
-        color: #669999;
-        font-size: 60px;
-        background-color: #FF9999;
+      body {
+        width: 700px;
+        margin: 0 auto;
+        font-family: 'PT Sans', sans-serif;
+        background-image: url(dc-online-media-mockup.jpg);
+        background-size: 800px 20624px;
+        background-repeat: no-repeat;
+        background-position: top center;
       }
 
-      h2 + p {
-        color: green;
+      h1, h2, h3 {
+        font-family: 'PT Sans Caption', sans-serif;
+        font-weight: bold;
+      }
+
+      h1 {
+        margin-top: 66px;
+        font-size: 40px;
+        line-height: 46px;
+      }
+
+      h1 + p {
+        margin: 0;
+        font-family: 'PT Sans Caption', sans-serif;
+        font-size: 22px;
+        line-height: 32px;
+        color: rgba(0, 0, 0, .4);
+      }
+
+      h2 {
+        margin-top: 37px;
+        font-size: 32px;
+        line-height: 46px;
+      }
+
+      h2 + p{
+      
+      }
+
+      p {
+        margin-top: 30px;
+        font-size: 21px;
+        line-height: 34px;
       }
     </style>
 
   </head>
   <body>
     <h1>Дом Наркомфина</h1>
-    <p>Дом Наркомфина — жилой дом переходного типа, построенный в <a target="_blank" href="https://ru.wikipedia.org/wiki/1930_год">1930 году</a> по проекту архитекторов <a target="_blank" href="https://ru.wikipedia.org/wiki/Гинзбург,_Моисей_Яковлевич">Моисея Гинзбурга</a> и <a target="_blank" href="https://ru.wikipedia.org/wiki/Милинис,_Игнатий_Францевич">Игнатия Милиниса</a> для работников <a target="_blank" href="https://ru.wikipedia.org/wiki/Народный_комиссариат_финансов">Народного комиссариата финансов СССР (Наркомфина)</a>. Находится в Москве на <a target="_blank" href="https://ru.wikipedia.org/wiki/Новинский_бульвар">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a target="_blank" href="https://ru.wikipedia.org/wiki/Конструктивизм_(искусство)">конструктивизма</a>.</p>
+    <p>Жилой дом переходного типа, построенный в <a target="_blank" href="https://ru.wikipedia.org/wiki/1930_год">1930 году</a> по проекту архитекторов <a target="_blank" href="https://ru.wikipedia.org/wiki/Гинзбург,_Моисей_Яковлевич">Моисея Гинзбурга</a> и <a target="_blank" href="https://ru.wikipedia.org/wiki/Милинис,_Игнатий_Францевич">Игнатия Милиниса</a> для работников <a target="_blank" href="https://ru.wikipedia.org/wiki/Народный_комиссариат_финансов">Народного комиссариата финансов СССР (Наркомфина)</a>. Находится в Москве на <a target="_blank" href="https://ru.wikipedia.org/wiki/Новинский_бульвар">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a target="_blank" href="https://ru.wikipedia.org/wiki/Конструктивизм_(искусство)">конструктивизма</a>.</p>
     <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение».</p>
 
     <h2>История создания</h2>
