добавила ресет и стили

--- a/index.html
+++ b/index.html
@@ -3,16 +3,56 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
+    <link rel="stylesheet" href="reset.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
 
     <style>
+      body{
+        width: 700px;
+        margin: 0 auto;
+        font-family: 'PT Sans', serif;
+        background-image: url(dc-online-media-mockup.jpg);
+        background-size: 800px 20624px;
+        background-position: top center;
+        background-repeat: no-repeat;
+      }
+
+      h1, h2, h3 {
+        font-family: 'PT Sans Caption', sans-serif;
+        font-weight: bold;
+      }
+
+      h1 {
+        margin-top: 66px;
+        font-size: 40px;
+        line-height: 46px;
+      }
+
+      h1 + p {
+        margin: 0px;
+        font-family: 'PT Sans Caption', sans-serif;
+        font-size: 22px;
+        line-height: 33px;
+        color: rgba(0, 0, 0, .4);
+      }
+
       h2 {
-        color: white;
-        font-size: 60px;
-        background-color: black;
+        margin-top: 39px;
+        font-size: 32px;
+        line-height: 46px;
       }
 
       h2 + p {
-        color: green;
+        margin: 0px;
+        margin-top: 39px;
+        font-size: 32px;
+        line-height: 46px;
+      }
+
+      p {
+        margin-top: 30px;
+        font-size: 22px;
+        line-height: 33px;
       }
     </style>
   </head>
@@ -50,6 +90,10 @@
     <p>В обоих концах жилого корпуса, по обе стороны лестницы со входом непосредственно с лестничной клетки, размещены квартиры «2F» (соединенные по две ячейки «F»), и занимающие площадь, равную двум сдвоенным малометражным квартирам (кв. 14 и 29). В этих квартирах две жилые комнаты высотой 3 м. Передняя, ванная, туалет, кухня и столовая имеют высоту 2,3 м. По существу, это обычные (одноярусные) квартиры с несколько непривычным распределением высот, а потому и с более интересным пространственным решением.</p>
     <p>И наконец, в самой верхней части дома, на уровне плоской крыши, сделано несколько комнат типа общежития, где реализовны опубликованные Н. Милютиным в «Соцгороде» жилые ячейки на одного человека. Часть из них — на одного человека, часть — на двух. Между каждой парой комнат расположены душевая и умывальная комнаты.</p>
     <p>Здание включает в себя около десятка типов квартир, в том числе:</p>
+
+    <!-- ul.li*3{Content} + tab - размножить строку-->
+    <!-- cmd/ - add a coment -->
+    <!-- TODO: Написать задание -->
 
     <ul>
       <li>Квартира типа F — основное количество жилых ячеек в доме минимального размера. В одни из них можно попасть из остекленной галереи или коридора, спускаясь по внутриквартирной лестнице в общую комнату, а в другие — поднимаясь в неё также по аналогичной лестнице.</li>
