--- a/index.html
+++ b/index.html
@@ -4,18 +4,59 @@
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
 
-    <style>
+   <link rel="stylesheet" href="reset.css">
+   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
+
+   <style>
+   body{
+     width: 700px;
+     margin: 0 auto;
+     font-family: "PT Sans",sans-serif;
+     background-position: top center;
+background-image: url(dc-online-media-mockup.jpg);
+background-size: 800px 20624px;
+background-repeat: no-repeat;
+   }
+
+  h1, h2, h3{
+     font-family: "PT Sans Caption", sans-serif;
+     font-weight: bold;
+   }
+
+  h1{
+    font-size: 40px;
+    line-height: 46px;
+    margin-top: 66px;
+  }
+
+  h1+p{
+    margin: 0;
+    font-family: "PT Sans Caption", sans-serif;
+    font-size: 22px;
+    line-height: 32px;
+    color: rgba(0, 0, 0, .4);
+    }
+
     h2{
-      color: red;
-      font-size: 60px;
-      background-color: blue;
+    font-size: 32px;
+    line-height: 46px;
+    margin-top: 40px; 
     }
 
     h2+p{
-      color: green;
+
     }
-    </style>
-  </head>
+
+  p {
+    margin-top: 30px;
+    font-size: 22px;
+    line-height: 32px;
+    margin-top: 30px;
+
+    }
+  }
+   </style>
+
   <body>
     <h1>Дом Наркомфина</h1>
     <p>Жилой дом переходного типа, построенный в<a target="_blank" href="https://ru.wikipedia.org/wiki/1930_%D0%B3%D0%BE%D0%B4"> 1930 году</a> по проекту архитекторов <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%BD%D0%B7%D0%B1%D1%83%D1%80%D0%B3,_%D0%9C%D0%BE%D0%B8%D1%81%D0%B5%D0%B9_%D0%AF%D0%BA%D0%BE%D0%B2%D0%BB%D0%B5%D0%B2%D0%B8%D1%87">Моисея Гинзбурга</a> и<a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D0%B8%D0%BD%D0%B8%D1%81,_%D0%98%D0%B3%D0%BD%D0%B0%D1%82%D0%B8%D0%B9_%D0%A4%D1%80%D0%B0%D0%BD%D1%86%D0%B5%D0%B2%D0%B8%D1%87"> Игнатия Милиниса </a>для работников <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B0%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D0%B9_%D0%BA%D0%BE%D0%BC%D0%B8%D1%81%D1%81%D0%B0%D1%80%D0%B8%D0%B0%D1%82_%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2">Народного комиссариата финансов СССР (Наркомфина)</a>. Находится в Москве на<a target="_blank" href=""> Новинском бульваре </a>по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%82%D0%B8%D0%B2%D0%B8%D0%B7%D0%BC_(%D0%B8%D1%81%D0%BA%D1%83%D1%81%D1%81%D1%82%D0%B2%D0%BE)">конструктивизма</a>.</p>
@@ -50,6 +91,7 @@
     <p>В обоих концах жилого корпуса, по обе стороны лестницы со входом непосредственно с лестничной клетки, размещены квартиры «2F» (соединенные по две ячейки «F»), и занимающие площадь, равную двум сдвоенным малометражным квартирам (кв. 14 и 29). В этих квартирах две жилые комнаты высотой 3 м. Передняя, ванная, туалет, кухня и столовая имеют высоту 2,3 м. По существу, это обычные (одноярусные) квартиры с несколько непривычным распределением высот, а потому и с более интересным пространственным решением.</p>
     <p>И наконец, в самой верхней части дома, на уровне плоской крыши, сделано несколько комнат типа общежития, где реализовны опубликованные Н. Милютиным в «Соцгороде» жилые ячейки на одного человека. Часть из них — на одного человека, часть — на двух. Между каждой парой комнат расположены душевая и умывальная комнаты.</p>
     <p>Здание включает в себя около десятка типов квартир, в том числе:</p>
+
 
     <ul>
       <li>Квартира типа F — основное количество жилых ячеек в доме минимального размера. В одни из них можно попасть из остекленной галереи или коридора, спускаясь по внутриквартирной лестнице в общую комнату, а в другие — поднимаясь в неё также по аналогичной лестнице.</li>
