--- a/index.html
+++ b/index.html
@@ -1,22 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Дом Наркомфина</title>
-</head>
-<body>
-  <h1>Дом Наркомфина</h1>
+  <meta charset="utf-8">
+  <title>Дом Наркомфина</title>
+  <link rel="stylesheet" href="reset.css">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
+
   <style>
-    h2 {
-      color: magenta;
-      font-size: 60px;
-      background-color: blue;"
+   body {
+      width: 700px;
+      margin: 0 auto;
+      font-family: 'PT Sans', sans-serif;
+      background-image: url(dc-online-media-mockup.jpg);
+      background-size: 800px 20624px;
+      background-position: top center;
+      background-repeat: no-repeat;
+    }
+
+    h1, h2, h3 {
+      font-family: 'PT Sans Caption', sans-serif;
+      font-weight: bold;
+    }
+
+    h1{
+      margin-top: 66px;
+      font-size: 40px;
+      line-height: 46px;
+      }
+
+    h1 + p {
+      margin: 0;
+      font-family: 'PT Sans Caption', sans-serif;
+      font-size: 22px;
+      line-height: 32px;
+      color: rgba(0, 0, 0, .4);
+      }
+
+    p{
+      margin-top: 30px;
+      font-size: 22px;
+      line-height: 33px;
+      }
+
+    h2{
+      margin-top: 39px;
+      font-size: 32px;
+      line-height: 46px;
     }
 
     h2 + p {
-    color: green;
+      margin-top: 39px;
     }
   </style>
+</head>
+<body>
+  <h1>Дом Наркомфина</h1>
   <p>Жилой дом переходного типа, построенный в <a target="_blank" href="https://ru.wikipedia.org/wiki/1930_%D0%B3%D0%BE%D0%B4">1930 году</a> по проекту архитекторов <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%BD%D0%B7%D0%B1%D1%83%D1%80%D0%B3,_%D0%9C%D0%BE%D0%B8%D1%81%D0%B5%D0%B9_%D0%AF%D0%BA%D0%BE%D0%B2%D0%BB%D0%B5%D0%B2%D0%B8%D1%87">Моисея Гинзбурга</a> и <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D0%B8%D0%BD%D0%B8%D1%81,_%D0%98%D0%B3%D0%BD%D0%B0%D1%82%D0%B8%D0%B9_%D0%A4%D1%80%D0%B0%D0%BD%D1%86%D0%B5%D0%B2%D0%B8%D1%87">Игнатия Милиниса</a> для работников <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B0%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D0%B9_%D0%BA%D0%BE%D0%BC%D0%B8%D1%81%D1%81%D0%B0%D1%80%D0%B8%D0%B0%D1%82_%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2">Народного комиссариата финансов СССР(Наркомфина)</a> . Находится в Москве на Новинском бульваре по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%82%D0%B8%D0%B2%D0%B8%D0%B7%D0%BC_(%D0%B8%D1%81%D0%BA%D1%83%D1%81%D1%81%D1%82%D0%B2%D0%BE)">конструктивизма</a>.</p>
   <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение»</p>
 
