--- a/index.html
+++ b/index.html
@@ -3,18 +3,60 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
+    <link rel="stylesheet" href="reset.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
 
     <style>
-      h2 {
-        color: white;
-        font-size: 60px;
-        background-color: pink;
-      }
+      body {
+        width: 700px;
+        margin: 0 auto;
+        font-family: "PT Sans", sans-serif;
+        background-image: url(dc-online-media-mockup.jpg);
+        background-size: 800px 20624px;
+        background-position: top center;
+        background-repeat: no-repeat;
+        }
 
-      h2 + p {
-        color: pink;
-      }
+        h1, h2, h3 {
+          font-family: "PT Sans Caption", sans-serif;
+          font-weight: bold;
+        }
+
+        h1 {
+          margin-top: 66px;
+          font-size: 40px;
+          line-height: 46px;
+        }
+
+        h1+p {
+          font-family: "PT Sans Caption", sans-serif;
+          font-size: 22px;
+          line-height: 32px;
+          color: rgba(0, 0, 0, .4);
+          margin: 0;
+        }
+
+        h2 {
+          margin-top: 39px;
+          font-size: 32px;
+          line-height: 46px;
+        }
+
+        h2+p {
+          margin-top: 0px;
+          font-family: "PT Sans Caption", sans-serif;
+          line-height: 34px;
+        }
+
+
+        p {
+          margin-top: 34px;
+          font-size: 22px;
+          line-height: 33px;
+        }
     </style>
+
+
   </head>
   <body>
     <h1>Дом Наркомфина</h1>
