--- a/index.html
+++ b/index.html
@@ -3,6 +3,56 @@
   <head>
     <meta charset="utf-8">
     <title>Дом Наркомфина</title>
+    <link rel="stylesheet" href="reset.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">
+
+    <style>
+      body {
+        width: 700px;
+        margin: 0 auto;
+        font-family: 'PT Sans', sans-serif;
+        background-image: url(dc-online-media-mockup.jpg);
+        background-size: 800px 20624px;
+        background-repeat: no-repeat;
+        background-position: top center;
+      }
+
+      h1, h2, h3 {
+        font-family: 'PT Sans Caption', sans-serif;
+        font-weight: bold;
+      }
+
+      h1 {
+        margin-top: 66px;
+        font-size: 40px;
+        line-height: 46px;
+      }
+
+      h1 + p {
+        margin: 0;
+        font-family: 'PT Sans Caption', sans-serif;
+        font-size: 22px;
+        line-height: 32px;
+        color: rgba(0, 0, 0, 0.4);
+      }
+
+      h2 {
+        margin-top: 39px;
+        font-size: 32px;
+        line-height: 46px;
+      }
+
+      h2 + p {
+        margin-top: 39px;
+      }
+
+      p {
+        margin-top: 30px;
+        font-size: 22px;
+        line-height: 33px;
+      }
+
+    </style>
   </head>
   <body>
     <h1>Дом Наркомфина</h1>
