--- a/index.html
+++ b/index.html
@@ -35,7 +35,25 @@
        line-height: 32px;
        color: rgba(0, 0, 0, .4);
      }
-   </style>
+
+     h2 {
+       margin-top: 101px;
+       font-size: 32px;
+       line-height: 47px;
+     }
+
+     h2 + p {
+     margin-top: 0px;
+     font-size: 22px;
+     line-height: 34px;
+     }
+
+     p {
+       margin-top: 30px;
+       font-size: 22px;
+       line-height: 33px;
+     }
+    </style>
   </head>
 
   <body>
