--- a/narkomfin.html
+++ b/narkomfin.html
@@ -11,10 +11,10 @@
         width: 700px;
         margin: 0 auto;
         font-family: 'PT Sans', sans-serif;
-        background-image: url(dc-online-media-mockup.jpg);
+        /*background-image: url(dc-online-media-mockup.jpg);
         background-size: 800px 20624px;
         background-repeat: no-repeat;
-        background-position: top center;
+        background-position: top center;*/
       }
 
       /*  Хак для верстки  */
@@ -43,7 +43,7 @@
       }
 
       h1 + p {
-        margin: 0;
+        margin-top: 14px;
         font-family: 'PT Sans Caption', sans-serif;
         font-size: 22px;
         line-height: 32px;
@@ -87,8 +87,19 @@
       blockquote + blockquote {
         margin-top: 29px;
       }
-    </style>
 
+      ul {
+        margin-left: 29px 0 29px 30px;
+      }
+
+      li {
+        margin: 17px 0;
+      }
+
+      a {
+        color: inherit;
+      }
+    </style>
   </head>
   <body>
     <h1>Дом Наркомфина</h1>
