--- a/narkomfin.html
+++ b/narkomfin.html
@@ -11,22 +11,11 @@
         width: 700px;
         margin: 0 auto;
         font-family: 'PT Sans', sans-serif;
-        background-image: url(dc-online-media-mockup.jpg);
+        /*background-image: url(dc-online-media-mockup.jpg);
         background-size: 800px  20624px;
         background-position: top center;
-        background-repeat: no-repeat;
+        background-repeat: no-repeat;*/
       }
-
-      /*  Хак для верстки  */
-
-      h1,
-      h2,
-      h3,
-      h1 + p {
-        letter-spacing: 0px;
-      }
-
-      /*  Конец хака  */
 
       h1, h2, h3 {
         font-family: 'Pt Sans Caption', sans-serif;
@@ -40,6 +29,7 @@
       }
 
       h1 + p {
+        margin-top: 14px;
         font-family: 'Pt Sans Caption', sans-serif;
         font-size: 22px;
         line-height: 32px;
@@ -65,10 +55,6 @@
         /*margin-top: 28px;*/
       }
 
-      li {
-        margin: 10px;
-      }
-
       blockquote {
         font-style: italic;
       }
@@ -88,6 +74,18 @@
 
       h3 + p {
        margin-top: 6px;
+      }
+
+      ul {
+        margin: 29px 0 29px 30px;
+      }
+
+      li {
+        margin: 17px 0;
+      }
+
+      a {
+        color: inherit;
       }
 
     </style>
@@ -127,8 +125,6 @@
     <p>И наконец, в самой верхней части дома, на уровне плоской крыши, сделано несколько комнат типа общежития, где реализовны опубликованные Н. Милютиным в «Соцгороде» жилые ячейки на одного человека. Часть из них — на одного человека, часть — на двух. Между каждой парой комнат расположены душевая и умывальная комнаты.</p>
     <p>Здание включает в себя около десятка типов квартир, в том числе:</p>
 
-    <!-- il>li*3{Content} -->
-    <!-- TODO Something-->
     <ul>
       <li>Квартира типа F — основное количество жилых ячеек в доме минимального размера. В одни из них можно попасть из остекленной галереи или коридора, спускаясь по внутриквартирной лестнице в общую комнату, а в другие — поднимаясь в неё также по аналогичной лестнице.</li>
       <li>Квартира типа K — 8 квартир для больших семей располагались в центральной части дома между лестничными клетками. Квартиры представляли собой двухъярусные жилые ячейки высотой каждого этажа 2,3 метра, при этом часть квартиры имела высоту потолка 4,6 метра, и в ней находилась общая жилая комната, выполняющая функции гостиной. На нижнем ярусе были устроены коридор, передняя, терраса и кухня, а в верхнем — две спальни размером 19,9 и 12,1 м². Кроме открытой террасы на втором этаже, для отдыха на воздухе и принятия солнечных ванн была предназначена также плоская крыша с разбитым на ней цветником.</li>
